[gd_scene load_steps=4 format=3 uid="uid://c3hvaxrk45hpa"]

[ext_resource type="Script" path="res://abilities/projectile_launcher.gd" id="1_8fs1q"]
[ext_resource type="Texture2D" uid="uid://dmdfnl8vc3idl" path="res://assets/temp/uzi.png" id="2_8713w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_65xn3"]
radius = 500.0

[node name="ProjectileLauncher" type="Node2D"]
script = ExtResource("1_8fs1q")
thumbnail_texture = ExtResource("2_8713w")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4

[node name="ShotTimer" type="Timer" parent="."]

[node name="RangeArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_65xn3")
